fixed header spacing

--- a/css/component.css
+++ b/css/component.css
@@ -255,7 +255,7 @@ span.nav-close:before {
 .user-description{
 		min-height: 200px;
 		max-width: 32em;
-		margin-left: 250px;
+		margin-left: 170px;
 }
 
 .user-description ul{
